<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="@dimen/_28sdp"
            android:textAlignment="textEnd"
            android:id="@+id/solutionTV"
            android:textColor="@color/DarkGray"
            android:layout_margin="@dimen/_10sdp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="@dimen/_48sdp"
            android:textAlignment="textEnd"
            android:id="@+id/resultTV"
            android:layout_margin="@dimen/_10sdp"/>

        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/_6sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_t"
                style="@style/number"
                android:text="@string/tik"/>

            <TextView
                android:id="@+id/btn_a"
                style="@style/number"
                android:text="@string/a"/>

            <TextView
                android:id="@+id/btn_b"
                style="@style/number"
                android:text="@string/b"/>

            <TextView
                android:id="@+id/btn_div"
                style="@style/operation"
                android:text="@string/div"/>
        </LinearLayout>

        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/_6sdp">

            <TextView
                android:id="@+id/btn_7"
                style="@style/number"
                android:text="@string/_7"/>

            <TextView
                android:id="@+id/btn_8"
                style="@style/number"
                android:text="@string/_8"/>

            <TextView
                android:id="@+id/btn_9"
                style="@style/number"
                android:text="@string/_9"/>

            <TextView
                android:id="@+id/btn_mlt"
                style="@style/operation"
                android:text="@string/multi"/>
        </LinearLayout>

        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/_6sdp">

            <TextView
                android:id="@+id/btn_4"
                style="@style/number"
                android:text="@string/_4"/>

            <TextView
                android:id="@+id/btn_5"
                style="@style/number"
                android:text="@string/_5"/>

            <TextView
                android:id="@+id/btn_6"
                style="@style/number"
                android:text="@string/_6"/>

            <TextView
                android:id="@+id/btn_sub"
                style="@style/operation"
                android:text="@string/subs"/>
        </LinearLayout>

        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/_6sdp">

            <TextView
                android:id="@+id/btn_1"
                style="@style/number"
                android:text="@string/_1"/>

            <TextView
                android:id="@+id/btn_2"
                style="@style/number"
                android:text="@string/_2"/>

            <TextView
                android:id="@+id/btn_3"
                style="@style/number"
                android:text="@string/_3"/>

            <TextView
                android:id="@+id/btn_add"
                style="@style/operation"
                android:text="@string/add"/>
        </LinearLayout>

        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/_6sdp">

            <TextView
                android:id="@+id/clear_btn"
                style="@style/number"
                android:text="@string/c"/>

            <TextView
                android:id="@+id/btn_del"
                style="@style/number"
                android:text="@string/del"/>

            <TextView
                android:id="@+id/btn_0"
                style="@style/number"
                android:text="@string/_0"/>

            <TextView
                android:id="@+id/btn_res"
                style="@style/operation"
                android:text="@string/res"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
